--- a/diffeq/ncert/9.ex.5/main.tex
+++ b/diffeq/ncert/9.ex.5/main.tex
@@ -136,8 +136,8 @@ Applying Bilinear transform, with $T = h$, we get,
 \begin{align}
     s &= \frac{2}{T}\frac{1 - z^{-1}}{1 + z^{-1}} = \frac{2}{h}\frac{1 - z^{-1}}{1 + z^{-1}}\\
     \implies Y\brak{z} &= \frac{2hc_1 \brak{z^2 - 1} + c_2h^2 \brak{z + 1}^2}{\brak{h^2 + 4}z^2 + 2\brak{h^2 - 4}z + \brak{h^2 + 4}}\\
-    \implies \brak{z^2 + 2\frac{h^2 - 4}{h^2 + 4}z + 1} Y\brak{z} &= 2hc_1 \brak{z^2 - 1} + c_2h^2 \brak{z^2 + 2z + 1}\\
-    \implies z^2Y\brak{z} + 2\frac{h^2 - 4}{h^2 + 4}zY\brak{z} + Y\brak{z} &= \brak{2h c_1 + c_2 h^2}z^2 + \brak{2h^2 c_2}z + \brak{h^2c_2 - 2hc_1} \label{bilinear_eq}
+    \implies \brak{z^2 + 2\frac{h^2 - 4}{h^2 + 4}z + 1} Y\brak{z} &= \frac{2hc_1 \brak{z^2 - 1} + c_2h^2 \brak{z^2 + 2z + 1}}{h^2 + 4}\\
+    \implies z^2Y\brak{z} + 2\frac{h^2 - 4}{h^2 + 4}zY\brak{z} + Y\brak{z} &= \frac{\brak{2h c_1 + c_2 h^2}z^2 + \brak{2h^2 c_2}z + \brak{h^2c_2 - 2hc_1}}{h^2 + 4} \label{bilinear_eq}
 \end{align}
 Some properties of one sided $z$ transform,
 \begin{align}
@@ -153,11 +153,15 @@ By the time shift property $\brak{\ref{time_shift_eq}}$,
 \end{align}
 Rewriting equation $\brak{\ref{bilinear_eq}}$, we get,
 \begin{align}
-    \implies z^2Y\brak{z} + 2\frac{h^2 - 4}{h^2 + 4}zY\brak{z} + Y\brak{z} &= \brak{2h c_1 + c_2 h^2}z^2 + \brak{2h^2 c_2}z + \brak{h^2c_2 - 2hc_1}
+    z^2Y\brak{z} &+ 2\frac{h^2 - 4}{h^2 + 4}zY\brak{z} + Y\brak{z} + \brak{- y\sbrak{1}z - y\sbrak{0}} + 2\brak{\frac{h^2 - 4}{h^2 + 4}}\brak{-zy\sbrak{0}} \nonumber\\
+    &= \frac{\brak{2h c_1 + c_2 h^2}z^2 + \brak{2h^2 c_2 - y\sbrak{1} - 2\brak{\frac{h^2 - 4}{h^2 + 4}}y\sbrak{0}}z + \brak{h^2c_2 - 2hc_1 - y\sbrak{0}}}{h^2 + 4} \label{z_trans_eq}\\
+    &\text{where } z \neq 0
 \end{align}
-Taking $z$ inverse transform on both sides of equation $\brak{\ref{bilinear_eq}}$,
+Region of convergence $\brak{\textbf{ROC}}$ is given by $z \neq 0$.
+Taking $z$ inverse transform on both sides of equation $\brak{\ref{z_trans_eq}}$,
 \begin{align}
-    hello
+    y&\sbrak{n + 2} + 2\brak{\frac{h^2 - 4}{h^2 + 4}} y\sbrak{n + 1} + y\sbrak{n} \nonumber\\
+    &= \frac{\brak{2h c_1 + c_2 h^2}\delta\sbrak{n + 2} + \brak{2h^2 c_2 - y\sbrak{1} - 2\brak{\frac{h^2 - 4}{h^2 + 4}}y\sbrak{0}}\delta\sbrak{n + 1} + \brak{h^2c_2 - 2hc_1 - y\sbrak{0}}\delta\sbrak{n}}{h^2 + 4}
 \end{align}
 
 \begin{figure}[h!]
