--- a/gd/ncert/6.5.16/main.tex
+++ b/gd/ncert/6.5.16/main.tex
@@ -123,9 +123,16 @@ If the sequence $x_n$ has to converge,
 
 We take the initial guess $= 7$, step size $= 0.01$, tolerance $= 0.0001$.
 \newline
-Scipy Solution: $7.999999930756325$
+Scipy Solution:
 \newline
-Using the gradient descent algorithm, we get $x_min = 7.999989986419678$
+\begin{align}
+    f_{\text{min}} = 1024.0000000000005\text{, } x_{\text{min}} = 7.999999930756325
+\end{align}
+\newline
+Using the gradient descent algorithm, we get,
+\begin{align}
+    f_{\text{min}} = 1024.000000004813\text{, } x_{\text{min}} = 7.999989986419678
+\end{align}
 
 \begin{figure}[h!]
    \centering
