--- a/quadeq/ncert/10.4.2.6/main.tex
+++ b/quadeq/ncert/10.4.2.6/main.tex
@@ -88,7 +88,7 @@ Substituting $f\brak{x}$ and $f^{\prime}\brak{x}$ in the difference equation, we
   x_{n + 1} &= \frac{2\brak{x_n}^2 + 90}{4x_n + 3} \text{, } x_n \neq -\frac{3}{4}
 \end{align}
 Taking initial guess $\brak{x_0} = 8$, we get the root as $x = 6.000000476837158$.
-Taking initial guess $\brak{x_0} = -8$, we get the root as $x = $.
+Taking initial guess $\brak{x_0} = -8$, we get the root as $x = -7.500000476837158$.
 \newline
 \textbf{Matrix Method:}
 Frobenius \textbf{companion matrix} for a polynomial $p$ of the form,
