--- a/beamers/quadeq/ncert/10.4.2.6/main.tex
+++ b/beamers/quadeq/ncert/10.4.2.6/main.tex
@@ -157,14 +157,9 @@ The eigen values of this companion matrix are the roots of the polynomial $p$. T
   c_0 + c_1\lambda + c_2\lambda^2 + \dots + c_{n - 1}\lambda^{n - 1} + \lambda^n &= 0\\
 \end{align}
 where $\lambda$ is the eigenvalue of $C\brak{p}$.
-\newline
-Let
 \begin{align}
-  p\brak{x} = x^2 + \frac{3}{2}x - 45 = 0
-\end{align}
-For the given question, the companion matrix is given by,
-\begin{align}
-    C\brak{p} = \myvec{0 & 45\\1 & -1.5}
+    p\brak{x} &= x^2 + \frac{3}{2}x - 45 = 0\\
+    C\brak{p} &= \myvec{0 & 45\\1 & -1.5}
 \end{align}
 \end{frame}
 
