--- a/prob/ncert/11.16.3.8.9/main.tex
+++ b/prob/ncert/11.16.3.8.9/main.tex
@@ -57,6 +57,7 @@
 \textbf{Question:}
 \newline
 Three coins are tossed at once. Find the probability of getting atmost two tails.
+\newline
 \textbf{Solution:}
 \newline
 Sample space $\brak{\Omega}$ is given by,
