--- a/beamers/prob/ncert/11.16.3.8.9/main.tex
+++ b/beamers/prob/ncert/11.16.3.8.9/main.tex
@@ -230,7 +230,7 @@ As number of trials increase, the relative frequency converges to the actual pro
 \begin{frame}
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.7\columnwidth]{figs/pmf1.png}
+  \includegraphics[width=0.7\columnwidth]{figs/pmf.png}
   \caption{PMF plot for $m$ = 3}
   \label{label}
 \end{figure}
@@ -239,10 +239,15 @@ As number of trials increase, the relative frequency converges to the actual pro
 % ---
 \begin{frame}
 \begin{figure}[h!]
-  \centering
-  \includegraphics[width=0.7\columnwidth]{figs/pmf2.png}
-  \caption{PMF plot for $m$ = 15 with the gaussian distrbution plot}
-  \label{label}
+    {\includegraphics[width=0.4\columnwidth]{./figs/gauss_0.png}}
+    \hspace{\fill}
+    {\includegraphics[width=0.4\columnwidth]{./figs/gauss_1.png}}
+\end{figure}
+\begin{figure}[h!]
+    {\includegraphics[width=0.4\columnwidth]{./figs/gauss_2.png}}
+    \hspace{\fill}
+    {\includegraphics[width=0.4\columnwidth]{./figs/gauss_3.png}}
+    \caption{Simulated PMF as well as Gaussian plots for $m = 15, 20, 50, 100$. This plot shows convergence of binomial distribution to Gaussian distribution as $m \to \infty$}
 \end{figure}
 \end{frame}
 
